fix covered methods sidebar, remove tests count

--- a/src/pages/agent-full-page/coverage-plugin/test-details/test-details.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/test-details/test-details.module.scss
@@ -8,10 +8,6 @@
     height: 58px;
     font-size: 18px;
     line-height: 24px;
-
-    & > * {
-      margin-right: 8px;
-    }
   }
 
   &__table-cell {
